some java 8 refactorings ; docs how to build mac bundle